2009-04-08  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.26.1

==================== 2.26.0.90 ====================

2009-04-08  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.26.0.90

2009-04-08  Vincent Untz  <vuntz@gnome.org>

	Make reboot and shutdown leave the session properly, by letting apps
	exit before doing the real reboot/shutdown.

	Note that because of the ConsoleKit policies, the ways it's handled
	when there are more than one user logged in or when the policy always
	require a password might be a bit different:
	 - in the usual case (single user, no password required), everything
	   works as expected.
	 - in the multiple users case (password generally required once), we
	   ask for the password before trying to exit the session.
	 - if the password is required each time the ConsoleKit action is
	   called, then we'll ask for the password only once, after having made
	   all apps exit. If this doesn't work (wrong password), since the
	   session is killed anyway, we log out and ask gdm to do the action.

	* gnome-session/gsm-marshal.list: add new signature that we need
	* gnome-session/gsm-consolekit.[ch]: add new privileges-completed
	signal
	(gsm_consolekit_class_init): add new signal
	(gsm_consolekit_get_result_for_action): new, split from
	gsm_consolekit_can_do_action()
	(gsm_consolekit_can_do_action): ensure that the CK connection works
	here (instead of requiring callers to do it), and use
	gsm_consolekit_get_result_for_action()
	(gsm_consolekit_is_session_for_other_user): new, ask ConsoleKit if a
	session object is for a different user than the current user (ignoring
	the login sessions)
	(gsm_consolekit_is_single_user): new, determine if there's only a
	single user logged in on this machine
	(obtain_privileges_cb): new, PolicyKit callback when the privileges
	were obtained/denied, to send the privileges-completed signal
	(gsm_consolekit_obtain_privileges_for_action): new, obtain the